엔티티 수정 및 DTO 수정 계산데이터작성